js/js.translator/testData/incremental/invalidation/constVals/lib1/l1.2.kt
const konst FOO = 1
